--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,148 @@
     scroll-behavior: smooth;
 }
 
-/* section-extra styling */
+/* navbar */
+
+.navigation{    
+    margin: 0 auto; 
+    margin-top: 0;   
+    height: auto;
+    width: 100vw;
+    padding: 0px;
+    background:#607D8B;
+    display: flex;
+    flex-direction: row;
+    text-transform: uppercase;
+    text-align: center;
+    justify-content: space-evenly;
+    color: #FFEB3B;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    border-bottom: 2px solid #FFEB3B;
+}
+
+.navigation ul li{
+    margin: 0.2em 0px;
+    list-style: none;
+}
+.navigation > .logo{
+    align-self: flex-start;
+    width: 5em;
+}
+
+.logo{
+    border: 3px black solid;
+    margin: auto 0;
+}
+
+.position {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    padding-inline-start: 0px;
+    margin-left: 0;
+    margin-right: 0;
+}   
+
+a.nav{
+    text-decoration: none;
+    color:rgb(252, 243, 164);
+    text-transform: uppercase;
+    padding: 6px;    
+}
+
+a.nav:hover {
+    font-weight: bold;
+}
+
+.menu:hover{
+    background: black;
+}
+
+/* hero section */
+
+#hero{
+    display: flex;
+    min-height: 540px;
+    background-image: url('/las.jpg');
+    margin: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: #FFF;
+    align-items: center;
+    margin-top: 80px;
+    border-top: 2px solid #FFEB3B;    
+}
+
+.hero__top{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.hero__header{
+    background-color: rgba(69, 90, 100, 0.8);
+    width: 1000%;
+    padding: 2rem;
+}
+
+.top__header1{
+    margin-bottom: 1rem;
+}
+
+.hero__bottom{
+    text-align: center;
+}
+
+.bottom__header1{
+    margin-bottom: 1rem;
+}
+
+.bottom__header2 h1 a{
+    text-decoration: none;
+    color: #FFEB3B;
+}
+
+.bottom__header2 h1 a:hover{
+    color: #030303b2;
+}
+
+/* functionalities */
+
+#functionalities{
+    background: #CFD8DC;
+    border-top: 2px solid #FFEB3B;
+}
+
+i{       
+    color: #757575;
+}
+
+.description{
+    padding: 1rem;
+}
+div.p1, div.p2, div.p3, div.p4{
+    padding: 1rem 0;
+}
+
+.section__functionalities{
+    display: flex;
+    list-style-type: none;
+    justify-content: space-around;     
+    padding: 2rem;   
+    align-items: center; 
+}
+
+.ul__functionalities{
+    flex: 1 1 25%;
+    margin: 0;
+    color: #212121;     
+    text-align: center;
+    align-items: center;
+}
+
+/* section-extra*/
 
 .section-extra_funcionality-1 {
     grid-area: func1;
@@ -71,13 +212,9 @@
     margin-bottom: 2rem;
 }
 
-/* Only in my section icons have class fa-5x */
-
 i.fa-5x {
-    color: #FFFFFF;
+    color: #FFFFFF; /* Only in my section icons have class fa-5x */
 }
-
-/* end section-extra styling */
 
 /* contact-section styling */
 
@@ -134,160 +271,6 @@ form {
     color: #FFFFFF; 
 }
 
-/* end of contact-section styling */
-
-.navigation{    
-    margin: 0 auto; 
-    margin-top: 0;   
-    height: auto;
-    width: 100vw;
-    padding: 0px;
-    background:#607D8B;
-    display: flex;
-    flex-direction: row;
-    text-transform: uppercase;
-    text-align: center;
-    justify-content: space-evenly;
-    color: #FFEB3B;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    border-bottom: 2px solid #FFEB3B;
-}
-
-.navigation ul li{
-    margin: 0.2em 0px;
-    list-style: none;
-}
-.navigation > .logo{
-    align-self: flex-start;
-    width: 5em;
-}
-
-.logo{
-    border: 3px black solid;
-    margin: auto 0;
-}
-
-.position {
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    padding-inline-start: 0px;
-    margin-left: 0;
-    margin-right: 0;
-}   
-
-a.nav{
-    text-decoration: none;
-    color:rgb(252, 243, 164);
-    text-transform: uppercase;
-    padding: 6px;    
-}
-
-a.nav:hover {
-    font-weight: bold;
-}
-
-.menu:hover{
-    background: black;
-}
-
-@media screen and (min-width: 600px){
-    .section-extra {
-        grid-template-columns: 1.5rem 1fr 1.5rem 1fr 1.5rem;
-        grid-template-rows: 1.5rem repeat(4,1fr) 1.5rem;
-        grid-template-areas: 
-            ".   .   .   .   ."
-            ". func1 . func2 ."
-            ". func3 . func4 ."
-            ". func5 . func6 ."
-            ". func7 func7 func7 ."
-            ".   .   .   .   .";
-    }
-}
-
-@media screen and (min-width: 800px){
-    .navigation {
-        flex-direction: row;
-        justify-content: space-between; 
-}
-
-   .menu{
-        display: flex;
-}
-
-     a.nav {
-        color: black;
-        padding: 7px 10 px 6px;
-        margin: 7px;
-        flex-shrink: 1;
-}
-
-   .position{
-       display: flex;
-       align-items: center;
-       padding-right: 10px;       
-}  
-
-   .nav{
-       border-radius: 10px;
-       margin-right: 5px;
-       padding: 10px;
-       flex-shrink: 1;
-       background: #CFD8DC;
-   }
-   .logo{
-       display: block;
-       align-self: center;
-       justify-self: flex-start;
-       margin: 0;
-   }
-   a.nav:hover {
-        font-weight: lighter;
-        background: rgb(252, 243, 164);
-    }
-    .menu:hover {
-        background: none;
-}
-    .section-extra {
-        grid-template-columns: 4rem 1fr 2rem 1fr 4rem;
-    }
-
-}
-
-#functionalities{
-    background: #CFD8DC;
-    border-top: 2px solid #FFEB3B;
-}
-
-i{       
-    color: #757575;
-}
-
-.description{
-    padding: 1rem;
-}
-div.p1, div.p2, div.p3, div.p4{
-    padding: 1rem 0;
-}
-
-.section__functionalities{
-    display: flex;
-    list-style-type: none;
-    justify-content: space-around;     
-    padding: 2rem;   
-    align-items: center; 
-}
-
-.ul__functionalities{
-    flex: 1 1 25%;
-    margin: 0;
-    color: #212121;     
-    text-align: center;
-    align-items: center;
-}
-
 .about__us--heading{
     text-align: center;
     background: #CFD8DC;
@@ -324,6 +307,100 @@ div.p1, div.p2, div.p3, div.p4{
     font-size: 1rem;
     padding: 1rem 0;
 }
+
+footer {
+    width:100%;
+    background:#607D8B;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+.footer{
+    font-size: 1rem;
+}
+
+@media screen and (min-width: 600px){
+    .hero__header{
+        border-radius: 2rem;
+        width: 80%;
+    }
+
+    .section-extra {
+        grid-template-columns: 1.5rem 1fr 1.5rem 1fr 1.5rem;
+        grid-template-rows: 1.5rem repeat(4,1fr) 1.5rem;
+        grid-template-areas: 
+            ".   .   .   .   ."
+            ". func1 . func2 ."
+            ". func3 . func4 ."
+            ". func5 . func6 ."
+            ". func7 func7 func7 ."
+            ".   .   .   .   .";
+    }
+}
+
+@media screen and (min-width: 800px){
+    
+    .navigation {
+        flex-direction: row;
+        justify-content: space-between; 
+    }
+
+    .menu{
+        display: flex;
+    }
+
+     a.nav {
+        color: black;
+        padding: 7px 10 px 6px;
+        margin: 7px;
+        flex-shrink: 1;
+    }
+
+   .position{
+       display: flex;
+       align-items: center;
+       padding-right: 10px;       
+    }  
+
+   .nav{
+       border-radius: 10px;
+       margin-right: 5px;
+       padding: 10px;
+       flex-shrink: 1;
+       background: #CFD8DC;
+   }
+   .logo{
+       display: block;
+       align-self: center;
+       justify-self: flex-start;
+       margin: 0;
+    }
+
+    a.nav:hover {
+        font-weight: lighter;
+        background: rgb(252, 243, 164);
+    }
+
+    .menu:hover {
+        background: none;
+    }
+
+    .hero__header{
+        width: 50%;
+    }
+    
+    .section-extra {
+        grid-template-columns: 4rem 1fr 2rem 1fr 4rem;
+    }
+
+}
+
+@media screen and (min-width: 999px){
+    .section-extra {
+        grid-template-columns: 9rem 1fr 5rem 1fr 9rem;
+    }
+}
+
 @media only screen and (max-width: 599px) {
     .section__functionalities{
         flex-direction: column;
@@ -359,21 +436,4 @@ div.p1, div.p2, div.p3, div.p4{
         grid-area: p4;
     }
 
-}
-
-@media screen and (min-width: 999px){
-    .section-extra {
-        grid-template-columns: 9rem 1fr 5rem 1fr 9rem;
-    }
-}
-
-footer {
-    width:100%;
-    background:#607D8B;
-    color: #FFFFFF;
-    text-align: center;
-}
-
-.footer{
-    font-size: 1rem;
 }
